openturns/1.24/_sources/auto_functional_modeling/index.rst.txt
:orphan:

.. _Functional modeling:

Functional modeling
===================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Univariate functions
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The univariate functions considered in this example can be, in some cases, orthogonal to a distribution, but this is not a necessary condition to create univariate functions. For example, Legendre polynomials are orthogonal with respect to the uniform distribution, but the monomials of the canonical polynomial basis are not necessarily orthogonal.">

.. only:: html

  .. image:: /auto_functional_modeling/univariate_functions/images/thumb/sphx_glr_plot_createUnivariateFunction_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_univariate_functions_plot_createUnivariateFunction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create univariate functions</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Vectorial functions
-------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composed function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_composed_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_composed_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a composed function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an aggregated function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_aggregated_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_aggregated_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create an aggregated function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear combination of functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_linear_combination_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_linear_combination_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear combination of functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a symbolic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_symbolic_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_symbolic_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a symbolic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a quadratic function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quadratic_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quadratic_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a quadratic function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Increase the output dimension of a function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_functions_outputDim_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_functions_outputDim.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Increase the output dimension of a function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a parametric function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_parametric_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_parametric_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a parametric function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Python function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_python_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_python_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Python function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Increase the input dimension of a function">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_functions_inputDim_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_functions_inputDim.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Increase the input dimension of a function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Defining Python and symbolic functions: a quick start introduction to functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quick_start_functions_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quick_start_functions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Defining Python and symbolic functions: a quick start introduction to functions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create multivariate functions">

.. only:: html

  .. image:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_createMultivariateFunction_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_createMultivariateFunction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create multivariate functions</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Functional basis
----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a multivariate basis of functions from scalar multivariable functions">

.. only:: html

  .. image:: /auto_functional_modeling/functional_basis/images/thumb/sphx_glr_plot_multidimensional_basis_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_functional_basis_plot_multidimensional_basis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a multivariate basis of functions from scalar multivariable functions</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Field functions
---------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value function">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_value_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_value_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Value function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Vertex value function">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_vertexvalue_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_vertexvalue_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Vertex value function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a connection function with a field output">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_viscous_fall_field_function_connection_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_viscous_fall_field_function_connection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Define a connection function with a field output</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a function with a field output: the viscous free fall example">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_viscous_fall_field_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_viscous_fall_field_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Define a function with a field output: the viscous free fall example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Logistic growth model">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_logistic_growth_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_logistic_growth_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Logistic growth model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a process sample from a sample">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_process_sample_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_process_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a process sample from a sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Function manipulation">

.. only:: html

  .. image:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_function_manipulation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_function_manipulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Function manipulation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Link to an external code
------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Link to a computer code with coupling tools">

.. only:: html

  .. image:: /auto_functional_modeling/link_to_an_external_code/images/thumb/sphx_glr_plot_link_computer_code_coupling_tools_thumb.png
    :alt:

  :ref:`sphx_glr_auto_functional_modeling_link_to_an_external_code_plot_link_computer_code_coupling_tools.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Link to a computer code with coupling tools</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /auto_functional_modeling/univariate_functions/index.rst
   /auto_functional_modeling/vectorial_functions/index.rst
   /auto_functional_modeling/functional_basis/index.rst
   /auto_functional_modeling/field_functions/index.rst
   /auto_functional_modeling/link_to_an_external_code/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_functional_modeling_python.zip </auto_functional_modeling/auto_functional_modeling_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_functional_modeling_jupyter.zip </auto_functional_modeling/auto_functional_modeling_jupyter.zip>`
